Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ANY

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> assignment eoe
Rule 5     statement -> from eoe
Rule 6     statement -> var_const eoe
Rule 7     statement -> if eoe
Rule 8     statement -> function eoe
Rule 9     statement -> call_func eoe
Rule 10    statement -> commands eoe
Rule 11    commands -> COMMAND MOVE
Rule 12    eoe -> NL
Rule 13    eoe -> EOE
Rule 14    eoe -> EOE NL
Rule 15    assignment -> variable EQ expression
Rule 16    assignment -> variable EQ error
Rule 17    variable -> STR index
Rule 18    variable -> STR OPBR index CLBR
Rule 19    index -> <empty>
Rule 20    index -> index COMMA INT
Rule 21    index -> INT
Rule 22    expression -> var_const
Rule 23    expression -> operation
Rule 24    expression -> un_operation
Rule 25    expression -> call_func
Rule 26    expression -> commands
Rule 27    expression -> logic_oper
Rule 28    var_const -> variable
Rule 29    var_const -> const
Rule 30    const -> INT
Rule 31    const -> FLOAT
Rule 32    const -> LOGIC
Rule 33    const -> TCELL
Rule 34    operation -> expression PLUS expression
Rule 35    operation -> expression MINUS expression
Rule 36    un_operation -> MINUS expression
Rule 37    from -> FROM expression TO expression DO FUNC NL statements END
Rule 38    from -> FROM expression TO expression call_func
Rule 39    from -> FROM expression TO expression WITH STEP expression DO FUNC NL statements END
Rule 40    from -> FROM expression TO expression WITH STEP expression call_func
Rule 41    from -> FROM expression TO expression WITH STEP expression DO FUNC error statements END
Rule 42    from -> FROM expression TO expression DO FUNC error statements END
Rule 43    from -> FROM expression error expression WITH STEP expression DO FUNC NL statements END
Rule 44    from -> FROM expression error expression DO FUNC NL statements END
Rule 45    from -> FROM expression TO expression WITH STEP expression DO error NL statements END
Rule 46    from -> FROM expression TO expression DO error NL statements END
Rule 47    from -> FROM expression TO expression error FUNC NL statements END
Rule 48    from -> FROM expression TO expression WITH STEP expression error FUNC NL statements END
Rule 49    call_func -> DO STR
Rule 50    if -> IF expression call_func
Rule 51    if -> IF expression DO FUNC NL statements END
Rule 52    if -> IF expression DO FUNC error statements END
Rule 53    if -> IF expression DO error NL statements END
Rule 54    if -> IF error DO FUNC NL statements END
Rule 55    if -> IF error call_func
Rule 56    if -> IF expression error FUNC NL statements END
Rule 57    logic_oper -> expression AND expression
Rule 58    logic_oper -> expression OR expression
Rule 59    logic_oper -> var_const COMP variable
Rule 60    logic_oper -> variable
Rule 61    function -> FUNC STR NL statements END
Rule 62    function -> FUNC STR error statements END
Rule 63    function -> error STR NL statements END

Terminals, with rules where they appear

AND                  : 57
ANY                  : 
CLBR                 : 18
COMMA                : 20
COMMAND              : 11
COMP                 : 59
DO                   : 37 39 41 42 43 44 45 46 49 51 52 53 54
END                  : 37 39 41 42 43 44 45 46 47 48 51 52 53 54 56 61 62 63
EOE                  : 13 14
EQ                   : 15 16
FLOAT                : 31
FROM                 : 37 38 39 40 41 42 43 44 45 46 47 48
FUNC                 : 37 39 41 42 43 44 47 48 51 52 54 56 61 62
IF                   : 50 51 52 53 54 55 56
INT                  : 20 21 30
LOGIC                : 32
MINUS                : 35 36
MOVE                 : 11
NL                   : 12 14 37 39 43 44 45 46 47 48 51 53 54 56 61 63
OPBR                 : 18
OR                   : 58
PLUS                 : 34
STEP                 : 39 40 41 43 45 48
STR                  : 17 18 49 61 62 63
TCELL                : 33
TO                   : 37 38 39 40 41 42 45 46 47 48
WITH                 : 39 40 41 43 45 48
error                : 16 41 42 43 44 45 46 47 48 52 53 54 55 56 62 63

Nonterminals, with rules where they appear

assignment           : 4
call_func            : 9 25 38 40 50 55
commands             : 10 26
const                : 29
eoe                  : 4 5 6 7 8 9 10
expression           : 15 34 34 35 35 36 37 37 38 38 39 39 39 40 40 40 41 41 41 42 42 43 43 43 44 44 45 45 45 46 46 47 47 48 48 48 50 51 52 53 56 57 57 58 58
from                 : 5
function             : 8
if                   : 7
index                : 17 18 20
logic_oper           : 27
operation            : 23
program              : 0
statement            : 2 3
statements           : 1 2 37 39 41 42 43 44 45 46 47 48 51 52 53 54 56 61 62 63
un_operation         : 24
var_const            : 6 22 59
variable             : 15 16 28 59 60

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . assignment eoe
    (5) statement -> . from eoe
    (6) statement -> . var_const eoe
    (7) statement -> . if eoe
    (8) statement -> . function eoe
    (9) statement -> . call_func eoe
    (10) statement -> . commands eoe
    (15) assignment -> . variable EQ expression
    (16) assignment -> . variable EQ error
    (37) from -> . FROM expression TO expression DO FUNC NL statements END
    (38) from -> . FROM expression TO expression call_func
    (39) from -> . FROM expression TO expression WITH STEP expression DO FUNC NL statements END
    (40) from -> . FROM expression TO expression WITH STEP expression call_func
    (41) from -> . FROM expression TO expression WITH STEP expression DO FUNC error statements END
    (42) from -> . FROM expression TO expression DO FUNC error statements END
    (43) from -> . FROM expression error expression WITH STEP expression DO FUNC NL statements END
    (44) from -> . FROM expression error expression DO FUNC NL statements END
    (45) from -> . FROM expression TO expression WITH STEP expression DO error NL statements END
    (46) from -> . FROM expression TO expression DO error NL statements END
    (47) from -> . FROM expression TO expression error FUNC NL statements END
    (48) from -> . FROM expression TO expression WITH STEP expression error FUNC NL statements END
    (28) var_const -> . variable
    (29) var_const -> . const
    (50) if -> . IF expression call_func
    (51) if -> . IF expression DO FUNC NL statements END
    (52) if -> . IF expression DO FUNC error statements END
    (53) if -> . IF expression DO error NL statements END
    (54) if -> . IF error DO FUNC NL statements END
    (55) if -> . IF error call_func
    (56) if -> . IF expression error FUNC NL statements END
    (61) function -> . FUNC STR NL statements END
    (62) function -> . FUNC STR error statements END
    (63) function -> . error STR NL statements END
    (49) call_func -> . DO STR
    (11) commands -> . COMMAND MOVE
    (17) variable -> . STR index
    (18) variable -> . STR OPBR index CLBR
    (30) const -> . INT
    (31) const -> . FLOAT
    (32) const -> . LOGIC
    (33) const -> . TCELL

    FROM            shift and go to state 13
    IF              shift and go to state 17
    FUNC            shift and go to state 15
    error           shift and go to state 12
    DO              shift and go to state 14
    COMMAND         shift and go to state 19
    STR             shift and go to state 18
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    LOGIC           shift and go to state 22
    TCELL           shift and go to state 23

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    from                           shift and go to state 5
    var_const                      shift and go to state 6
    if                             shift and go to state 7
    function                       shift and go to state 8
    call_func                      shift and go to state 9
    commands                       shift and go to state 10
    variable                       shift and go to state 11
    const                          shift and go to state 16

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . assignment eoe
    (5) statement -> . from eoe
    (6) statement -> . var_const eoe
    (7) statement -> . if eoe
    (8) statement -> . function eoe
    (9) statement -> . call_func eoe
    (10) statement -> . commands eoe
    (15) assignment -> . variable EQ expression
    (16) assignment -> . variable EQ error
    (37) from -> . FROM expression TO expression DO FUNC NL statements END
    (38) from -> . FROM expression TO expression call_func
    (39) from -> . FROM expression TO expression WITH STEP expression DO FUNC NL statements END
    (40) from -> . FROM expression TO expression WITH STEP expression call_func
    (41) from -> . FROM expression TO expression WITH STEP expression DO FUNC error statements END
    (42) from -> . FROM expression TO expression DO FUNC error statements END
    (43) from -> . FROM expression error expression WITH STEP expression DO FUNC NL statements END
    (44) from -> . FROM expression error expression DO FUNC NL statements END
    (45) from -> . FROM expression TO expression WITH STEP expression DO error NL statements END
    (46) from -> . FROM expression TO expression DO error NL statements END
    (47) from -> . FROM expression TO expression error FUNC NL statements END
    (48) from -> . FROM expression TO expression WITH STEP expression error FUNC NL statements END
    (28) var_const -> . variable
    (29) var_const -> . const
    (50) if -> . IF expression call_func
    (51) if -> . IF expression DO FUNC NL statements END
    (52) if -> . IF expression DO FUNC error statements END
    (53) if -> . IF expression DO error NL statements END
    (54) if -> . IF error DO FUNC NL statements END
    (55) if -> . IF error call_func
    (56) if -> . IF expression error FUNC NL statements END
    (61) function -> . FUNC STR NL statements END
    (62) function -> . FUNC STR error statements END
    (63) function -> . error STR NL statements END
    (49) call_func -> . DO STR
    (11) commands -> . COMMAND MOVE
    (17) variable -> . STR index
    (18) variable -> . STR OPBR index CLBR
    (30) const -> . INT
    (31) const -> . FLOAT
    (32) const -> . LOGIC
    (33) const -> . TCELL

    $end            reduce using rule 1 (program -> statements .)
    FROM            shift and go to state 13
    IF              shift and go to state 17
    FUNC            shift and go to state 15
    error           shift and go to state 12
    DO              shift and go to state 14
    COMMAND         shift and go to state 19
    STR             shift and go to state 18
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    LOGIC           shift and go to state 22
    TCELL           shift and go to state 23

    statement                      shift and go to state 24
    assignment                     shift and go to state 4
    from                           shift and go to state 5
    var_const                      shift and go to state 6
    if                             shift and go to state 7
    function                       shift and go to state 8
    call_func                      shift and go to state 9
    commands                       shift and go to state 10
    variable                       shift and go to state 11
    const                          shift and go to state 16

state 3

    (3) statements -> statement .

    FROM            reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    FUNC            reduce using rule 3 (statements -> statement .)
    error           reduce using rule 3 (statements -> statement .)
    DO              reduce using rule 3 (statements -> statement .)
    COMMAND         reduce using rule 3 (statements -> statement .)
    STR             reduce using rule 3 (statements -> statement .)
    INT             reduce using rule 3 (statements -> statement .)
    FLOAT           reduce using rule 3 (statements -> statement .)
    LOGIC           reduce using rule 3 (statements -> statement .)
    TCELL           reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    END             reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> assignment . eoe
    (12) eoe -> . NL
    (13) eoe -> . EOE
    (14) eoe -> . EOE NL

    NL              shift and go to state 26
    EOE             shift and go to state 27

    eoe                            shift and go to state 25

state 5

    (5) statement -> from . eoe
    (12) eoe -> . NL
    (13) eoe -> . EOE
    (14) eoe -> . EOE NL

    NL              shift and go to state 26
    EOE             shift and go to state 27

    eoe                            shift and go to state 28

state 6

    (6) statement -> var_const . eoe
    (12) eoe -> . NL
    (13) eoe -> . EOE
    (14) eoe -> . EOE NL

    NL              shift and go to state 26
    EOE             shift and go to state 27

    eoe                            shift and go to state 29

state 7

    (7) statement -> if . eoe
    (12) eoe -> . NL
    (13) eoe -> . EOE
    (14) eoe -> . EOE NL

    NL              shift and go to state 26
    EOE             shift and go to state 27

    eoe                            shift and go to state 30

state 8

    (8) statement -> function . eoe
    (12) eoe -> . NL
    (13) eoe -> . EOE
    (14) eoe -> . EOE NL

    NL              shift and go to state 26
    EOE             shift and go to state 27

    eoe                            shift and go to state 31

state 9

    (9) statement -> call_func . eoe
    (12) eoe -> . NL
    (13) eoe -> . EOE
    (14) eoe -> . EOE NL

    NL              shift and go to state 26
    EOE             shift and go to state 27

    eoe                            shift and go to state 32

state 10

    (10) statement -> commands . eoe
    (12) eoe -> . NL
    (13) eoe -> . EOE
    (14) eoe -> . EOE NL

    NL              shift and go to state 26
    EOE             shift and go to state 27

    eoe                            shift and go to state 33

state 11

    (15) assignment -> variable . EQ expression
    (16) assignment -> variable . EQ error
    (28) var_const -> variable .

    EQ              shift and go to state 34
    NL              reduce using rule 28 (var_const -> variable .)
    EOE             reduce using rule 28 (var_const -> variable .)


state 12

    (63) function -> error . STR NL statements END

    STR             shift and go to state 35


state 13

    (37) from -> FROM . expression TO expression DO FUNC NL statements END
    (38) from -> FROM . expression TO expression call_func
    (39) from -> FROM . expression TO expression WITH STEP expression DO FUNC NL statements END
    (40) from -> FROM . expression TO expression WITH STEP expression call_func
    (41) from -> FROM . expression TO expression WITH STEP expression DO FUNC error statements END
    (42) from -> FROM . expression TO expression DO FUNC error statements END
    (43) from -> FROM . expression error expression WITH STEP expression DO FUNC NL statements END
    (44) from -> FROM . expression error expression DO FUNC NL statements END
    (45) from -> FROM . expression TO expression WITH STEP expression DO error NL statements END
    (46) from -> FROM . expression TO expression DO error NL statements END
    (47) from -> FROM . expression TO expression error FUNC NL statements END
    (48) from -> FROM . expression TO expression WITH STEP expression error FUNC NL statements END
    (22) expression -> . var_const
    (23) expression -> . operation
    (24) expression -> . un_operation
    (25) expression -> . call_func
    (26) expression -> . commands
    (27) expression -> . logic_oper
    (28) var_const -> . variable
    (29) var_const -> . const
    (34) operation -> . expression PLUS expression
    (35) operation -> . expression MINUS expression
    (36) un_operation -> . MINUS expression
    (49) call_func -> . DO STR
    (11) commands -> . COMMAND MOVE
    (57) logic_oper -> . expression AND expression
    (58) logic_oper -> . expression OR expression
    (59) logic_oper -> . var_const COMP variable
    (60) logic_oper -> . variable
    (17) variable -> . STR index
    (18) variable -> . STR OPBR index CLBR
    (30) const -> . INT
    (31) const -> . FLOAT
    (32) const -> . LOGIC
    (33) const -> . TCELL

    MINUS           shift and go to state 44
    DO              shift and go to state 14
    COMMAND         shift and go to state 19
    STR             shift and go to state 18
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    LOGIC           shift and go to state 22
    TCELL           shift and go to state 23

    expression                     shift and go to state 36
    call_func                      shift and go to state 37
    var_const                      shift and go to state 38
    operation                      shift and go to state 39
    un_operation                   shift and go to state 40
    commands                       shift and go to state 41
    logic_oper                     shift and go to state 42
    variable                       shift and go to state 43
    const                          shift and go to state 16

state 14

    (49) call_func -> DO . STR

    STR             shift and go to state 45


state 15

    (61) function -> FUNC . STR NL statements END
    (62) function -> FUNC . STR error statements END

    STR             shift and go to state 46


state 16

    (29) var_const -> const .

    NL              reduce using rule 29 (var_const -> const .)
    EOE             reduce using rule 29 (var_const -> const .)
    COMP            reduce using rule 29 (var_const -> const .)
    TO              reduce using rule 29 (var_const -> const .)
    error           reduce using rule 29 (var_const -> const .)
    PLUS            reduce using rule 29 (var_const -> const .)
    MINUS           reduce using rule 29 (var_const -> const .)
    AND             reduce using rule 29 (var_const -> const .)
    OR              reduce using rule 29 (var_const -> const .)
    DO              reduce using rule 29 (var_const -> const .)
    WITH            reduce using rule 29 (var_const -> const .)


state 17

    (50) if -> IF . expression call_func
    (51) if -> IF . expression DO FUNC NL statements END
    (52) if -> IF . expression DO FUNC error statements END
    (53) if -> IF . expression DO error NL statements END
    (54) if -> IF . error DO FUNC NL statements END
    (55) if -> IF . error call_func
    (56) if -> IF . expression error FUNC NL statements END
    (22) expression -> . var_const
    (23) expression -> . operation
    (24) expression -> . un_operation
    (25) expression -> . call_func
    (26) expression -> . commands
    (27) expression -> . logic_oper
    (28) var_const -> . variable
    (29) var_const -> . const
    (34) operation -> . expression PLUS expression
    (35) operation -> . expression MINUS expression
    (36) un_operation -> . MINUS expression
    (49) call_func -> . DO STR
    (11) commands -> . COMMAND MOVE
    (57) logic_oper -> . expression AND expression
    (58) logic_oper -> . expression OR expression
    (59) logic_oper -> . var_const COMP variable
    (60) logic_oper -> . variable
    (17) variable -> . STR index
    (18) variable -> . STR OPBR index CLBR
    (30) const -> . INT
    (31) const -> . FLOAT
    (32) const -> . LOGIC
    (33) const -> . TCELL

    error           shift and go to state 48
    MINUS           shift and go to state 44
    DO              shift and go to state 14
    COMMAND         shift and go to state 19
    STR             shift and go to state 18
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    LOGIC           shift and go to state 22
    TCELL           shift and go to state 23

    expression                     shift and go to state 47
    call_func                      shift and go to state 37
    var_const                      shift and go to state 38
    operation                      shift and go to state 39
    un_operation                   shift and go to state 40
    commands                       shift and go to state 41
    logic_oper                     shift and go to state 42
    variable                       shift and go to state 43
    const                          shift and go to state 16

state 18

    (17) variable -> STR . index
    (18) variable -> STR . OPBR index CLBR
    (19) index -> .
    (20) index -> . index COMMA INT
    (21) index -> . INT

    OPBR            shift and go to state 50
    COMMA           reduce using rule 19 (index -> .)
    EQ              reduce using rule 19 (index -> .)
    NL              reduce using rule 19 (index -> .)
    EOE             reduce using rule 19 (index -> .)
    COMP            reduce using rule 19 (index -> .)
    TO              reduce using rule 19 (index -> .)
    error           reduce using rule 19 (index -> .)
    PLUS            reduce using rule 19 (index -> .)
    MINUS           reduce using rule 19 (index -> .)
    AND             reduce using rule 19 (index -> .)
    OR              reduce using rule 19 (index -> .)
    DO              reduce using rule 19 (index -> .)
    WITH            reduce using rule 19 (index -> .)
    INT             shift and go to state 51

    index                          shift and go to state 49

state 19

    (11) commands -> COMMAND . MOVE

    MOVE            shift and go to state 52


state 20

    (30) const -> INT .

    NL              reduce using rule 30 (const -> INT .)
    EOE             reduce using rule 30 (const -> INT .)
    COMP            reduce using rule 30 (const -> INT .)
    TO              reduce using rule 30 (const -> INT .)
    error           reduce using rule 30 (const -> INT .)
    PLUS            reduce using rule 30 (const -> INT .)
    MINUS           reduce using rule 30 (const -> INT .)
    AND             reduce using rule 30 (const -> INT .)
    OR              reduce using rule 30 (const -> INT .)
    DO              reduce using rule 30 (const -> INT .)
    WITH            reduce using rule 30 (const -> INT .)


state 21

    (31) const -> FLOAT .

    NL              reduce using rule 31 (const -> FLOAT .)
    EOE             reduce using rule 31 (const -> FLOAT .)
    COMP            reduce using rule 31 (const -> FLOAT .)
    TO              reduce using rule 31 (const -> FLOAT .)
    error           reduce using rule 31 (const -> FLOAT .)
    PLUS            reduce using rule 31 (const -> FLOAT .)
    MINUS           reduce using rule 31 (const -> FLOAT .)
    AND             reduce using rule 31 (const -> FLOAT .)
    OR              reduce using rule 31 (const -> FLOAT .)
    DO              reduce using rule 31 (const -> FLOAT .)
    WITH            reduce using rule 31 (const -> FLOAT .)


state 22

    (32) const -> LOGIC .

    NL              reduce using rule 32 (const -> LOGIC .)
    EOE             reduce using rule 32 (const -> LOGIC .)
    COMP            reduce using rule 32 (const -> LOGIC .)
    TO              reduce using rule 32 (const -> LOGIC .)
    error           reduce using rule 32 (const -> LOGIC .)
    PLUS            reduce using rule 32 (const -> LOGIC .)
    MINUS           reduce using rule 32 (const -> LOGIC .)
    AND             reduce using rule 32 (const -> LOGIC .)
    OR              reduce using rule 32 (const -> LOGIC .)
    DO              reduce using rule 32 (const -> LOGIC .)
    WITH            reduce using rule 32 (const -> LOGIC .)


state 23

    (33) const -> TCELL .

    NL              reduce using rule 33 (const -> TCELL .)
    EOE             reduce using rule 33 (const -> TCELL .)
    COMP            reduce using rule 33 (const -> TCELL .)
    TO              reduce using rule 33 (const -> TCELL .)
    error           reduce using rule 33 (const -> TCELL .)
    PLUS            reduce using rule 33 (const -> TCELL .)
    MINUS           reduce using rule 33 (const -> TCELL .)
    AND             reduce using rule 33 (const -> TCELL .)
    OR              reduce using rule 33 (const -> TCELL .)
    DO              reduce using rule 33 (const -> TCELL .)
    WITH            reduce using rule 33 (const -> TCELL .)


state 24

    (2) statements -> statements statement .

    FROM            reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    FUNC            reduce using rule 2 (statements -> statements statement .)
    error           reduce using rule 2 (statements -> statements statement .)
    DO              reduce using rule 2 (statements -> statements statement .)
    COMMAND         reduce using rule 2 (statements -> statements statement .)
    STR             reduce using rule 2 (statements -> statements statement .)
    INT             reduce using rule 2 (statements -> statements statement .)
    FLOAT           reduce using rule 2 (statements -> statements statement .)
    LOGIC           reduce using rule 2 (statements -> statements statement .)
    TCELL           reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    END             reduce using rule 2 (statements -> statements statement .)


state 25

    (4) statement -> assignment eoe .

    FROM            reduce using rule 4 (statement -> assignment eoe .)
    IF              reduce using rule 4 (statement -> assignment eoe .)
    FUNC            reduce using rule 4 (statement -> assignment eoe .)
    error           reduce using rule 4 (statement -> assignment eoe .)
    DO              reduce using rule 4 (statement -> assignment eoe .)
    COMMAND         reduce using rule 4 (statement -> assignment eoe .)
    STR             reduce using rule 4 (statement -> assignment eoe .)
    INT             reduce using rule 4 (statement -> assignment eoe .)
    FLOAT           reduce using rule 4 (statement -> assignment eoe .)
    LOGIC           reduce using rule 4 (statement -> assignment eoe .)
    TCELL           reduce using rule 4 (statement -> assignment eoe .)
    $end            reduce using rule 4 (statement -> assignment eoe .)
    END             reduce using rule 4 (statement -> assignment eoe .)


state 26

    (12) eoe -> NL .

    FROM            reduce using rule 12 (eoe -> NL .)
    IF              reduce using rule 12 (eoe -> NL .)
    FUNC            reduce using rule 12 (eoe -> NL .)
    error           reduce using rule 12 (eoe -> NL .)
    DO              reduce using rule 12 (eoe -> NL .)
    COMMAND         reduce using rule 12 (eoe -> NL .)
    STR             reduce using rule 12 (eoe -> NL .)
    INT             reduce using rule 12 (eoe -> NL .)
    FLOAT           reduce using rule 12 (eoe -> NL .)
    LOGIC           reduce using rule 12 (eoe -> NL .)
    TCELL           reduce using rule 12 (eoe -> NL .)
    $end            reduce using rule 12 (eoe -> NL .)
    END             reduce using rule 12 (eoe -> NL .)


state 27

    (13) eoe -> EOE .
    (14) eoe -> EOE . NL
